SurrealDb.Net.Tests/Snapshots/v1/RawQueryTests.ShouldHaveOneProtocolErrorResult.verified.txt
There was a problem with the database: Parse error: Failed to parse query at line 1 column 5 expected query to end
  |
1 | abc def;
  |     ^ perhaps missing a semicolon on the previous statement?
